--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 MONGODB_URL = mongodb://127.0.0.1:27017/my_db
 MONGODB_URL_1 = mongodb+srv://seri:12345@cluster0.lgkij.mongodb.net/
 JWT_SECRET_KEY = supersecretkey79938884
+SESSION_SECRET_KEY = supersecretkey79938885
